# sanjie

./: .cnb.yml  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PaymentService.py  README.md  REVIEW_REPORT.md  UserService.py  install.py  plugin.json  pyproject.toml  setup_benchmark.py  test_mcp_integration.py
.claude/: review-ignores.json  settings.local.json
.gemini/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
a2a_inbox/review_tickets/: WLG-20260521-4D7D4649.json  WLG-20260521-941BCFEE.json  WLG-20260521-A606CDF3.json  WLG-20260521-C332C5F7.json  WLG-20260521-F9B9DE09.json  WLG-20260527-A25C0D2D.json  WLG-20260529-7522DB22.json  WLG-20260529-958D672D.json  WLG-20260529-A636013C.json  WLG-20260529-C0658799.json  WLG-20260529-F7F7C270.json
agents/: jinzha.md  nezha.md  taibai.md  wanglingguan.md  yangjian.md
agents/_shared/: host_profiles.md  skill_registry.md
agents_dev/docs/: __init__.py  chunker.py  config.py  errors.py  models.py  store.py
cli/: __init__.py  create_cmd.py  docs_cmd.py  export_cmd.py  generate_cmd.py  list_cmd.py  main.py  validate_cmd.py
components/: README.md
components/_example/: manifest.json
components/dochub/: manifest.json
config/: mcp_settings.json.example
core/: __init__.py
core/agents/: __init__.py  base.py
core/mcp_base/: __init__.py  server.py  tool_def.py
core/shared/: __init__.py  base.py  config.py  errors.py  logging.py  registry.py  utils.py
core/skills/: __init__.py  base.py
core/tools/: __init__.py  base.py
docs/: MEMORY_INDEX.md  SPEC.md  SubAgent开发最佳实践方案.md  SubAgent检验评测最佳实践方案.md  architecture.md  cli_reference.md  component_development.md  migration_guide.md
docs/archive/: 2025-05-18_payment_bugfix.md  DevProcess.md
formats/: __init__.py
mcp-servers/: auto_server.py  taibai_server.py  tianyan_server.py  wanglingguan_server.py  yindan_server.py
migration/: __init__.py  exporter.py
scripts/: validate_taibai_100.py
skill_manager/: __init__.py  __main__.py  errors.py  language.py  main.py  models.py  resolver.py  server.py  store.py  trigger.py
skills/: a2a_daemon.py  a2a_utils.py  utils.py
tests/: conftest.py  test_a2a_inbox.py  test_archive_manager.py  test_assignment_planner.py  test_auto_server.py  test_bajiu_router.py  test_celestial_registry.py  test_code_caller_tracer.py  test_context_compressor.py  test_demon_hunt.py  test_dependency_analyzer.py  test_executor.py  test_format_auditor.py  test_gssc_pipeline.py  test_guard.py  test_import_validator.py  test_logic_tracer.py  test_lotus_body.py  test_nezha_integration.py  test_precise_fix.py  test_review_request.py  test_routing_hypothesis.py  test_scope_guardian.py  test_security_scanner.py  test_semantic_analyzer.py  test_standard_write.py  test_task_analyzer.py  test_ticket_manager.py  test_utils.py  test_wanglingguan_integration.py  test_wanglingguan_server.py  test_web_doc_fetcher.py  test_workload_assessor.py
tools/: create_persona.py
(+229 files in other folders)
