[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-develop"
version = "2.0.0"
description = "AI-powered code investigation, fixing, and review toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "zmc576700954" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-php>=0.24.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.25.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
agents = "agents_develop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_develop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[project.urls]
Homepage = "https://github.com/zmc576700954/sanjie"
